package Competition;


 class Competitor  {

	protected    int nbPts;


	/**
	* auto gen docs
	**/
 	public    Competitor(String name) ;

	/**
	* auto gen docs
	* @return :void:
	**/
 	public  void  addPts() ;

	/**
	* auto gen docs
	* @return :int:
	**/
 	public  int  getPts() {

		return 0;
	}


}