package Competition.meeting;


 class League implements Competition  {


	/**
	* auto gen docs
	**/
 	public    League() ;


}